Do not forget to return true, and thus fail, when removing the exif comment.

BUG: 308078